# IPL-Prediction-merged

./: .gitignore  CODEBASE_DEEP_DIVE.md  IPL_ML_Papers_Reference.md  README.md  conftest.py  output_metrics.md  pyproject.toml  requirements.txt  run_all.py  run_alt_transformer.py
.github/workflows/: ci.yml
dashboard/: index.html
data/external_2026/: ingame_dataset.csv  label_corrections.csv  prematch_dataset.csv
data_pipeline/: .gitignore  DATASET_STRUCTURE.md  README.md  convert_to_excel.py
defect report/: DEFECT_REPORT.md  refactor suggestion.md
docs/: codebase_walkthrough.md  evaluation_metrics.md  known_limitations.md
models/: alt_transformer.pt
notebooks/: run_all.ipynb  run_alt_transformer.ipynb
notebooks/src/: alt_transformer_data.ipynb  alt_transformer_train.ipynb  data.ipynb  elo.ipynb  explainability.ipynb  features.ipynb  metrics.ipynb  (+8 more)
reports/: dashboard_data.json  run_summary.txt
scripts/: validate_game_state.py
src/: alt_transformer_data.py  alt_transformer_train.py  dashboard_export.py  data.py  elo.py  explainability.py  features.py  game_state.py  metrics.py  models.py  pipeline.py  player_features.py  temperature_scaling.py  tournament.py  transformer_model.py  win_probability_engine.py
tests/: test_alt_transformer.py  test_artefacts.py  test_dashboard_export.py  test_defect_fixes.py  test_elo.py  test_evaluation_metrics.py  test_features.py  test_game_state.py  test_metrics.py  test_model_sanity.py  test_pipeline.py  test_pipeline_integrity.py  test_player_features.py  test_temperature_scaling.py  test_win_probability_engine.py
